--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "react-tabs": "^3.1.1",
     "styled-components": "^5.1.1",
     "yarn": "^1.22.4"
   },
